--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<div class="card">
+	<div class="hero">
 		<img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="img-src">
 		<div class="card-1">
 		<h1>Welcome to my Pinterest clone</h1>
